// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Register component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Welcome Logo"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Back"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Back"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Create new account
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Create an account allows our space
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          monkeys to do great things for you
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-username-label"
            for="textfield-register-username"
            id="textfield-register-username-label"
          >
            Username
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-username"
              id="textfield-register-username"
              maxlength="39"
              placeholder="Choose a username"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Username
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-email-label"
            for="textfield-register-email"
            id="textfield-register-email-label"
          >
            E-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-email"
              id="textfield-register-email"
              maxlength="100"
              placeholder="your@email.com"
              required=""
              type="email"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  E-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-password-label"
            for="textfield-register-password"
            id="textfield-register-password-label"
          >
            Password (Must have at least 6 characters)
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-password"
              id="textfield-register-password"
              maxlength="100"
              placeholder="Choose a password"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Password (Must have at least 6 characters)
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-confirm-password-label"
            for="textfield-register-confirm-password"
            id="textfield-register-confirm-password-label"
          >
            Retype your password
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-confirm-password"
              id="textfield-register-confirm-password"
              maxlength="100"
              placeholder="Repeat your password"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Retype your password
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            data-testid="checkbox-register-eula-acceptance"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input"
                data-indeterminate="false"
                id="checkbox-agree"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <label
            class="MuiTypography-root Component-root Component-root MuiTypography-body2"
            for="checkbox-agree"
          >
            I agree to these
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
              data-testid="privacy-policy-link"
              href="/front/eula"
              target="_blank"
            >
              "
              Terms of Use
              "
            </a>
          </label>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-disabled MuiButtonBase-disabled"
            data-testid="box-register-submit-button"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Create account
            </span>
          </button>
        </div>
      </form>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        Already have an account?
         
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
          data-testid="login-link"
          href="/front/login"
        >
          Sign in
        </a>
      </p>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Created
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Version
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Portuguese"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Portuguese"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Brasil flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="English"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="English"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="United Kingdom flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Spanish"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Spanish"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Spain flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`testing Register component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Welcome Logo"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Voltar"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Voltar"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Criar nova conta
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Crie uma conta para nossos macacos
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          espaciais fazerem grandes coisas por você
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-username-label"
            for="textfield-register-username"
            id="textfield-register-username-label"
          >
            Nome de usuário
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-username"
              id="textfield-register-username"
              maxlength="39"
              placeholder="Escolha o nome de usuário"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Nome de usuário
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-email-label"
            for="textfield-register-email"
            id="textfield-register-email-label"
          >
            E-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-email"
              id="textfield-register-email"
              maxlength="100"
              placeholder="seuemail@email.com"
              required=""
              type="email"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  E-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-password-label"
            for="textfield-register-password"
            id="textfield-register-password-label"
          >
            Senha (Precisa ter no mínimo 6 caracteres)
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-password"
              id="textfield-register-password"
              maxlength="100"
              placeholder="Escolha uma senha"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Senha (Precisa ter no mínimo 6 caracteres)
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-confirm-password-label"
            for="textfield-register-confirm-password"
            id="textfield-register-confirm-password-label"
          >
            Confirme sua senha
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-confirm-password"
              id="textfield-register-confirm-password"
              maxlength="100"
              placeholder="Repita a senha"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Confirme sua senha
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            data-testid="checkbox-register-eula-acceptance"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input"
                data-indeterminate="false"
                id="checkbox-agree"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <label
            class="MuiTypography-root Component-root Component-root MuiTypography-body2"
            for="checkbox-agree"
          >
            Concordo com os
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
              data-testid="privacy-policy-link"
              href="/front/eula"
              target="_blank"
            >
              "
              Termos de Uso
              "
            </a>
          </label>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-disabled MuiButtonBase-disabled"
            data-testid="box-register-submit-button"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Criar conta
            </span>
          </button>
        </div>
      </form>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        Você já tem uma conta?
         
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
          data-testid="login-link"
          href="/front/login"
        >
          Logar
        </a>
      </p>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Criado
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Versão
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Português"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Português"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira do Brasil"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Inglês"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="Inglês"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira do Reino Unido"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Espanhol"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Espanhol"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira da Espanha"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`testing Register component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Welcome Logo"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Volver"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Volver"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Crear nueva cuenta
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Crear una cuenta permite que
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          nuestros monos espaciales hagan grandes cosas por ti
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-username-label"
            for="textfield-register-username"
            id="textfield-register-username-label"
          >
            Nombre de usuario
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-username"
              id="textfield-register-username"
              maxlength="39"
              placeholder="Elige un nombre de usuario"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Nombre de usuario
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-email-label"
            for="textfield-register-email"
            id="textfield-register-email-label"
          >
            E-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-email"
              id="textfield-register-email"
              maxlength="100"
              placeholder="your@email.com"
              required=""
              type="email"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  E-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-password-label"
            for="textfield-register-password"
            id="textfield-register-password-label"
          >
            Contraseña (Debe tener al menos 6 caracteres)
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-password"
              id="textfield-register-password"
              maxlength="100"
              placeholder="Elije una contraseña"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Contraseña (Debe tener al menos 6 caracteres)
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="textfield-register-confirm-password-label"
            for="textfield-register-confirm-password"
            id="textfield-register-confirm-password-label"
          >
            Reescribe tu contraseña
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="textfield-register-confirm-password"
              id="textfield-register-confirm-password"
              maxlength="100"
              placeholder="Repite la contraseña"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Reescribe tu contraseña
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            data-testid="checkbox-register-eula-acceptance"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input"
                data-indeterminate="false"
                id="checkbox-agree"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <label
            class="MuiTypography-root Component-root Component-root MuiTypography-body2"
            for="checkbox-agree"
          >
            Acordado con los
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
              data-testid="privacy-policy-link"
              href="/front/eula"
              target="_blank"
            >
              "
              Términos de Uso
              "
            </a>
          </label>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-disabled MuiButtonBase-disabled"
            data-testid="box-register-submit-button"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Crear una cuenta
            </span>
          </button>
        </div>
      </form>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        ¿Ya tienes una cuenta?
         
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
          data-testid="login-link"
          href="/front/login"
        >
          Iniciar sesión
        </a>
      </p>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Creado
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Versión
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Portugués"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Portugués"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera de Brasil"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Inglés"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="Inglés"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera del Reino Unido"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Español"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Español"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera de España"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
